--- a/Web/src/app/nav/nav.component.html
+++ b/Web/src/app/nav/nav.component.html
@@ -1,25 +1,37 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carousel</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <a class="navbar-brand" href="#">Proyecto Angular</a>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Opción 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Opción 2</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <div class="dropdown" *ngIf="loggedIn" dropdown>
+            <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Menú</a>
+            <div class="dropdown-menu mt-3" *dropdownMenu>
+                <a class="dropdown-item" (click)="logOut()">Salir</a>
+            </div>
+        </div>
+        <form *ngIf="!loggedIn" #loginForm = "ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
+          <input
+           name = "username"
+           [(ngModel)]="model.username"
+            class="form-control me-2" 
+            type="text" 
+            placeholder="Usuario">
+          <input
+           name = "password"
+           [(ngModel)]="model.password"
+           class="form-control me-2" 
+           type="password" 
+           placeholder="Contraseña">
+          <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
-      </div>
     </div>
-  </nav>
+</nav>
